Figure edits from the manuscript comments

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -441,22 +441,20 @@
     "fig=plt.figure(figsize=(2.66*size,size))\n",
     "dt=5.0\n",
     "\n",
-    "blah = detrend(dir_single['Activity'][0,:300])\n",
+    "blah = dir_single['Activity'][0,:300]\n",
     "plt.plot(dir_single['t'][:300],blah,'#A4C2A5',zorder=-10)\n",
     "temp = dat_single[np.argwhere(dat_single[:,-3]==dir_single['x'][0]),-2]\n",
     "temptemp = temp[:,0]/5\n",
     "plt.scatter(temp,blah[temptemp.astype('int')],c='#574D68')\n",
-    "plt.vlines(0.0,np.amin(blah),np.amax(blah),colors='#EF476F',linestyle='dashed',zorder=-10)\n",
-    "plt.vlines(60.0,np.amin(blah),np.amax(blah),colors='#EF476F',linestyle='dashed',zorder=-10)\n",
-    "plt.vlines(1000.0,np.amin(blah),np.amax(blah),colors='#EF476F',linestyle='dashed',zorder=-10)\n",
-    "plt.vlines(1200.0,np.amin(blah),np.amax(blah),colors='#EF476F',linestyle='dashed',zorder=-10)\n",
+    "plt.axvspan(0.0,60.0,color='grey',alpha=0.25)\n",
+    "plt.axvspan(1000.0,1200.0,color='grey',alpha=0.25)\n",
     "\n",
     "plt.xlabel('Time (min)')\n",
-    "plt.ylabel('Detrended FRET Ratio (a.u.)')\n",
+    "plt.ylabel('FRET Ratio (a.u.)')\n",
     "plt.xlim([-10,1500])\n",
     "plt.xticks(ticks=[0,500,1000,1500],labels=['0','500','1000','1500'])\n",
-    "fig.savefig('dani_figs/chem_singleTube_Cdc25Tube4_DetrendedFRET_.eps', bbox_inches='tight', dpi=300)\n",
-    "plt.show()\n"
+    "# fig.savefig('dani_figs/chem_singleTube_Cdc25Tube4_FRETRatio.svg', bbox_inches='tight', dpi=300)\n",
+    "plt.show()"
    ]
   },
   {
