Added code to group tubes and produce .npz files

--- a/main/figures.ipynb
+++ b/main/figures.ipynb
@@ -796,12 +796,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db09b650",
+   "metadata": {},
+   "source": [
+    "To load data from scratch, run the following blocks. Alternatively (to save time), we provide the processed data save as .npz files ['expt_data.npz' and 'expt_data_csf.npz'] which can be loaded directly in the next section(s) ['Calculate....'] as needed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "j2KHF1VWgDwu",
    "metadata": {
     "id": "j2KHF1VWgDwu"
    },
    "source": [
     "## Load Each Kymograph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19fc51ad",
+   "metadata": {},
+   "source": [
+    "### Load "
    ]
   },
   {
@@ -1091,6 +1107,127 @@
     "i0,i1,j0,j1 = 37,43,0,-1\n",
     "array[i0:i1] = (array[i0] + array[i1])/2\n",
     "dir_dd['temp']['063021 (CSF)']['Pos3 (nuc)']['Tube5Ratio_Montage.tif']['Activity'] = array.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eb9b1f7",
+   "metadata": {},
+   "source": [
+    "## Group Tubes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31837061",
+   "metadata": {},
+   "source": [
+    "### Undriven"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0142a382",
+   "metadata": {},
+   "source": [
+    "The indices of the data structure are as follows:\n",
+    "\n",
+    "{0 = wave,\n",
+    "1 = time,\n",
+    "2 = period,\n",
+    "3 = speed,\n",
+    "5 = activation rate}\n",
+    "\n",
+    "The other indices correspond to quantities we measured but did not ultimately analyze fully.\n",
+    "We further clean the data here to reflect physical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15a42ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_con = get_sel_elements(dir_dd['temp']['030222 (Cdc25 Inhib)']['Pos1 (0 uM no nuc)'],\n",
+    "                           dir_dd['temp']['080421 (CSF_Cont)']['Pos1 (no nuc)'])\n",
+    "dat_con = group_tubes_v1(dir_con,1)\n",
+    "\n",
+    "dir_con_n = get_sel_elements(dir_dd['temp']['030222 (Cdc25 Inhib)']['Pos1 (0 uM nuc)'],\n",
+    "                           dir_dd['temp']['032322 (Wee1 Inhib)']['Pos1 (0 uM nuc)'])\n",
+    "dat_con_n = group_tubes_v1(dir_con_n,1)\n",
+    " \n",
+    "data_t_s = dat_con.copy()\n",
+    "data_t_s = np.nan_to_num(data_t_s,nan=1e10)\n",
+    "data_t_s = data_t_s[abs(data_t_s[:,3])<1e5]\n",
+    "data_t_s = data_t_s[data_t_s[:,3] > 1e1]\n",
+    "data_t_s = data_t_s[data_t_s[:,1] < 1500]\n",
+    "data_t_s = data_t_s[data_t_s[:,2] > 0.0]\n",
+    "data_t_s = data_t_s[data_t_s[:,2] < 300]\n",
+    "data_t_s = data_t_s[data_t_s[:,5] < 0.1]\n",
+    "mask = data_t_s[:,1] < 0\n",
+    "data_t_s[mask] = 0\n",
+    "\n",
+    "data_t_n_s = dat_con_n.copy()\n",
+    "data_t_n_s = np.nan_to_num(data_t_n_s,nan=1e10)\n",
+    "data_t_n_s = data_t_n_s[abs(data_t_n_s[:,3])<1e5]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,3] > 1e1]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,1] < 1500]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,2] > 0.0]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,2] < 300]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,5] < 0.1]\n",
+    "mask = data_t_n_s[:,1] < 0\n",
+    "data_t_n_s[mask] = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50cd00a5",
+   "metadata": {},
+   "source": [
+    "### Driven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c43d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_csf = get_sel_elements(dir_dd['temp']['063021 (CSF)']['Pos6 (no nuc)'],\n",
+    "                           dir_dd['temp']['063021 (CSF)']['Pos7 (no nuc)'],\n",
+    "                           dir_dd['temp']['063021 (CSF)']['Pos8 (no nuc)'],\n",
+    "                           dir_dd['temp']['080421 (CSF)']['Pos2 (no nuc)'],\n",
+    "                           dir_dd['temp']['080421 (CSF)']['Pos3 (no nuc)'])\n",
+    "dat_csf = group_tubes_v1(dir_csf,1)\n",
+    "\n",
+    "dir_csf_n = get_sel_elements(dir_dd['temp']['063021 (CSF)']['Pos2 (nuc)'],\n",
+    "                             dir_dd['temp']['063021 (CSF)']['Pos3 (nuc)'],\n",
+    "                             dir_dd['temp']['063021 (CSF)']['Pos4 (nuc)'],\n",
+    "                             dir_dd['temp']['080421 (CSF)']['Pos5 (nuc)'],\n",
+    "                             dir_dd['temp']['080421 (CSF)']['Pos6 (nuc)'])\n",
+    "dat_csf_n = group_tubes_v1(dir_csf_n,1)\n",
+    "\n",
+    "data_t_s = dat_csf.copy()\n",
+    "data_t_s = np.nan_to_num(data_t_s,nan=1e10)\n",
+    "data_t_s = data_t_s[abs(data_t_s[:,3])<1e4]\n",
+    "data_t_s = data_t_s[data_t_s[:,3] > 1e1]\n",
+    "data_t_s = data_t_s[data_t_s[:,1] < 1200]\n",
+    "data_t_s = data_t_s[data_t_s[:,2] > 0.0]\n",
+    "data_t_s = data_t_s[data_t_s[:,2] < 300]\n",
+    "mask = data_t_s[:,1] < 0\n",
+    "data_t_s[mask] = 0\n",
+    "\n",
+    "data_t_n_s = dat_csf_n.copy()\n",
+    "data_t_n_s = np.nan_to_num(data_t_n_s,nan=1e10)\n",
+    "data_t_n_s = data_t_n_s[abs(data_t_n_s[:,3])<1e4]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,3] > 1e1]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,1] < 1200]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,2] > 0.0]\n",
+    "data_t_n_s = data_t_n_s[data_t_n_s[:,2] < 300]\n",
+    "mask = data_t_n_s[:,1] < 0\n",
+    "data_t_n_s[mask] = 0"
    ]
   },
   {
