Added the comment for saving .npz files

--- a/main/figures.ipynb
+++ b/main/figures.ipynb
@@ -1177,7 +1177,11 @@
     "data_t_n_s = data_t_n_s[data_t_n_s[:,2] < 300]\n",
     "data_t_n_s = data_t_n_s[data_t_n_s[:,5] < 0.1]\n",
     "mask = data_t_n_s[:,1] < 0\n",
-    "data_t_n_s[mask] = 0"
+    "data_t_n_s[mask] = 0\n",
+    "\n",
+    "### This will overwrite the saved .npz files\n",
+    "### DO NOT RUN\n",
+    "# np.savez('expt_data.npz', arr1=data_t_s, arr2=data_t_n_s) "
    ]
   },
   {
@@ -1227,7 +1231,11 @@
     "data_t_n_s = data_t_n_s[data_t_n_s[:,2] > 0.0]\n",
     "data_t_n_s = data_t_n_s[data_t_n_s[:,2] < 300]\n",
     "mask = data_t_n_s[:,1] < 0\n",
-    "data_t_n_s[mask] = 0"
+    "data_t_n_s[mask] = 0\n",
+    "\n",
+    "### This will overwrite the saved .npz files\n",
+    "### DO NOT RUN\n",
+    "# np.savez('expt_data_csf.npz', arr1=data_t_s, arr2=data_t_n_s) "
    ]
   },
   {
